// Copyright(c) 2017-2018 Zededa, Inc.
// All rights reserved.

syntax = "proto3";

option go_package  = "github.com/lf-edge/eve/api/go/register";
option java_package = "org.lfedge.eve.register";

//Â This is the request payload for POST /api/v1/edgeDevice/register
// ZRegisterMsg carries the pem-encoded device certificate plus additional
// identifying information such as device serial number(s).
// The message is assumed to be protected by a TLS session bound to the
// onboarding certificate.
message ZRegisterMsg {
  string onBoardKey = 1; // deprecated
  // deprecated = 1;

  bytes pemCert = 2;
  string serial = 3;
  string softSerial = 4;
}

// XXX is this used? Not in client.go; deprecate
enum ZRegisterResult {
  ZRegNone         = 0;
  ZRegSuccess      = 1;
  ZRegNotActive    = 2;
  ZRegAlreadyDone  = 3;
  ZRegDeviceNA     = 4;
  ZRegFailed       = 5;
}

// XXX is this used? Not in client.go; deprecate
message ZRegisterResp {
  ZRegisterResult result = 2;
}
